Add filterInfoView to describe current filter

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src='js/app/mapView.js'></script>
   <script src='js/app/popupView.js'></script>
   <script src='js/app/filterView.js'></script>
+  <script src='js/app/filterInfoView.js'></script>
   <script src='js/app/attrFilterView.js'></script>
   <script src='js/app/dateFilterView.js'></script>
   <script src='js/app/checkboxView.js'></script>
