--- a/index.html
+++ b/index.html
@@ -76,29 +76,22 @@
 </script>
 
 <script type="text/html" id="template-filter">
-<h3><%= title %></h3>
-<div class="select">
-  <a href="#" class="select_all">Select All</a> | 
-  <a href="#" class="select_none">Select None</a>
-</div>
+<h4><%= title %> &nbsp;<small><a href="#" class="select select_all">Show All</a></small></h4>
+
 </script>
 
 <script type="text/html" id="template-filter-date">
-<h3>Dates</h3>
-<div class="form-group">
-  <label for="date-start">From</label>
-  <input id="date-start" class="form-control" type="date"/>
-</div>
-<div class="form-group">
-  <label for="date-end">To</label>
-  <input id="date-end" class="form-control" type="date"/>
+<h4>Dates &nbsp;<small><a href="javascript:void(0);" class="select select_all">Show All</a></small></h4>
+<div>
+12 Dec 2012 &mdash; 6 Jul 2013
+<br><small><a href="javascript:void(0);" class="select select_date">Change dates</a></small>
 </div>
 </script>
 
 <script type="text/html" id="template-checkbox">
 <label>
   <input type="checkbox" value="<%= value %>" checked>
-  <span class="<%= labelClass %>"><%= text %></span>
+  <span class="<%= labelClass %>"><%= text %></span> &nbsp;<small><a class="select select_one" href="javascript:void(0);">only</a></small>
 </label>
 </script>
 
