--- a/index.html
+++ b/index.html
@@ -76,22 +76,23 @@
 </script>
 
 <script type="text/html" id="template-filter">
-<h4><%= title %> &nbsp;<small><a href="#" class="select select_all">Show All</a></small></h4>
+<h4><%= title %> &nbsp;<small><a href="#" class="select select_all"><%= t("ui.select_all")%></a></small></h4>
 
 </script>
 
 <script type="text/html" id="template-filter-date">
-<h4>Dates &nbsp;<small><a href="javascript:void(0);" class="select select_all">Show All</a></small></h4>
+<h4>Dates &nbsp;<small><a href="javascript:void(0);" class="select select_all"><%= t("ui.select_all") %></a></small></h4>
 <div>
 12 Dec 2012 &mdash; 6 Jul 2013
-<br><small><a href="javascript:void(0);" class="select select_date">Change dates</a></small>
+<br><small><a href="javascript:void(0);" class="select select_date"><%= t("ui.select_dates") %></a></small>
 </div>
 </script>
 
 <script type="text/html" id="template-checkbox">
 <label>
   <input type="checkbox" value="<%= value %>" checked>
-  <span class="<%= labelClass %>"><%= text %></span> &nbsp;<small><a class="select select_one" href="javascript:void(0);">only</a></small>
+  <span class="<%= labelClass %>"><%= text %></span> 
+  &nbsp;<small><a class="select select_one" href="javascript:void(0);"><%= t("ui.select_one") %></a></small>
 </label>
 </script>
 
