Add multiple layer support (including Bing Satellite)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <script src='js/lib/lodash.modern-2.4.1.js'></script>
   <script src='js/lib/backbone.js'></script>
   <script src='js/lib/crossfilter.v1.js'></script>
+  <script src='js/lib/bing_layer.js'></script>
+  <script src='js/lib/leaflet_providers.js'></script>
 
   <script src='js/monitoring_point.js'></script>
 
