initial working google maps api + layers

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
   <script src='js/lib/d3.v3.js'></script>
   <script src='js/lib/locale.js'></script>
   <script src='data/locale.js'></script>
-  <script src='js/lib/leaflet-0.7.1.js'></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEF807Tc2SHVzyZVhN3-eHU8LHN5IVC28"></script>
   <script src='js/lib/lodash.modern-2.4.1.js'></script>
   <script src='js/lib/backbone.js'></script>
   <script src='js/lib/crossfilter.v1.js'></script>
-  <script src='js/lib/bing_layer.js'></script>
-  <script src='js/lib/leaflet_providers.js'></script>
 
   <script src='js/monitoring_point.js'></script>
 
@@ -26,9 +25,10 @@
 
   <script src='js/mapfilter/collection.js'></script>
 
-  <script src='js/mapfilter/map_pane/map_pane.js'></script>
-  <script src='js/mapfilter/map_pane/marker_view.js'></script>
-  <script src='js/mapfilter/map_pane/current_view_info.js'></script>
+  <script src='js/mapfilter/google_map_pane/google_map_utils.js'></script>
+  <script src='js/mapfilter/google_map_pane/map_pane.js'></script>
+  <script src='js/mapfilter/google_map_pane/marker_view.js'></script>
+  <script src='js/mapfilter/google_map_pane/current_view_info.js'></script>
 
   <script src='js/mapfilter/info_pane/info_pane.js'></script>
 
