--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <script src='js/mapfilter/collection.js'></script>
 
+  <script src='js/mapfilter/google_map_pane/custom_marker.js'></script>
   <script src='js/mapfilter/google_map_pane/google_map_utils.js'></script>
   <script src='js/mapfilter/google_map_pane/map_pane.js'></script>
   <script src='js/mapfilter/google_map_pane/marker_view.js'></script>
