first working GFW overlay

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <script src='js/mapfilter/google_map_pane/custom_marker.js'></script>
   <script src='js/mapfilter/google_map_pane/google_map_utils.js'></script>
+  <script src='js/mapfilter/google_map_pane/global_forest_watch.js'></script>
   <script src='js/mapfilter/google_map_pane/map_pane.js'></script>
   <script src='js/mapfilter/google_map_pane/marker_view.js'></script>
   <script src='js/mapfilter/google_map_pane/current_view_info.js'></script>
