--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/aight/1.1.1/aight.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/sizzle/1.10.9/sizzle.min.js"></script>
     <![endif]-->
-
-    <link href='./bundle.css' rel='stylesheet' />
+    <style>
+    :focus {
+      outline: none;
+    }
+    body, html {
+      margin: 0;
+      padding: 0;
+    }
+    </style>
   </head>
 
   <body>
-    <div id="app"></div>
-
-    <script src='./bundle.js'></script>
+    <div id="root"></div>
+    <script src='bundle.js'></script>
   </body>
 
 </html>
