--- a/js/index.html
+++ b/js/index.html
@@ -15,13 +15,13 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/sizzle/1.10.9/sizzle.min.js"></script>
     <![endif]-->
 
-    <link href='./bundle.css' rel='stylesheet' />
+    <link href='../dist/bundle.css' rel='stylesheet' />
   </head>
 
   <body>
     <div id="app"></div>
 
-    <script src='./bundle.js'></script>
+    <script src='index.js'></script>
   </body>
 
 </html>
