Add Intl polyfill for intl date formatting on Safari

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/aight/1.1.1/aight.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/sizzle/1.10.9/sizzle.min.js"></script>
     <![endif]-->
+
+    <!-- polyfill Intl for Safari mainly -->
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Intl"></script>
+
     <style>
     :focus {
       outline: none;
