--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <body>
     <div id="root"></div>
-    <script src='bundle.js'></script>
+    <script src='/bundle.js'></script>
   </body>
 
 </html>
