Refactor - remove react-router and compose views

--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
     <![endif]-->
 
     <!-- polyfill Intl for Safari mainly -->
-    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Intl"></script>
+    <!-- <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Intl"></script> -->
 
     <style>
     :focus {
